# QBob

./: .gitignore  CMakeLists.txt  QBob.pro  README.md  main.cpp  main.qml
3rd/qhook/lib/: QHook.lib
HttpMsg/: HttpMsg.cpp  HttpMsg.h  HttpMsgInterface.h
Qml/: main.qml
ScreenCapture/: ScreenCapture.cpp  ScreenCapture.h
Tools/: Tools.cpp  Tools.h  WindowHook.cpp  WindowHook.h
TranslateAPI/: TranslateEnum.h
TranslateAPI/Baidu/: BaiduOCR.cpp  BaiduOCR.h  BaiduTranslation.cpp  BaiduTranslation.h  TextTranslation.cpp  TextTranslation.h
log/: TSpdlog.cpp  TSpdlog.h  ThirdEasyLogger.cpp  ThirdEasyLogger.h
